Internal project rename!!!

--- a/ILEditor/Resources/Help/FTP.html
+++ b/ILEditor/Resources/Help/FTP.html
@@ -41,13 +41,14 @@
 
     <p>Still not working? Check out these guides:</p>
     <ul>
-        <li><a href="https://www.youtube.com/watch?v=EqxPjfYz5Oc&feature=youtu.be">Add ftp.exe to the firewall</a> (video) - after you have done this, test Idle again as you may not need to unblock the ports if this works.</li>
+        <li><a href="https://www.youtube.com/watch?v=EqxPjfYz5Oc&feature=youtu.be">Add ftp.exe to the firewall</a> (video) - after you have done this, test 
+        again as you may not need to unblock the ports if this works.</li>
         <li><a href="http://www.sysprobs.com/how-to-allow-ftp-traffic-through-windows-8-8-1-windows-7-firewall">How to Allow FTP Traffic Through Windows 8, 8.1 and Windows 7 Firewall</a> (article) - also works for Windows 10</li>
         <li><a href="http://joehertvik.com/ibm-i-quicktip-when-you-cant-ftp-from-a-windows-desktop-to-an-ibm-i/">IBM i QuickTip: When You Can’t FTP from a Windows Desktop to an IBM i</a> (article)</li>
     </ul>
 
-    <h3>Using Idle within Parallels (Mac)</h3>
-    <p>If you're having the issue where you can't get a number of features working while using Idle in a Parallels VM, you need to change the default network adapter to be bridged.</p>
+    <h3>Using ILEditor within Parallels (Mac)</h3>
+    <p>If you're having the issue where you can't get a number of features working while using ILEditor in a Parallels VM, you need to change the default network adapter to be bridged.</p>
     <img width="100%" src="https://camo.githubusercontent.com/6e59bb382e4dc4c69c8d1574f10c37a17297629b/687474703a2f2f692e696d6775722e636f6d2f5451394b5370672e706e67" />
 </body>
 </html>
