--- a/ILEditor/Resources/Diagram/diagram.html
+++ b/ILEditor/Resources/Diagram/diagram.html
@@ -27,10 +27,11 @@
     <div id="cy"></div>
     <script>
 
+
 var json = !JSONHERE!;
 
 var item, target;
-var keys = [];
+var nodes = [];
 var edges = [];
 
 for (var i = 0; i < json.length; i++) {
@@ -39,19 +40,11 @@ for (var i = 0; i < json.length; i++) {
   
   if (json[i][1].Library === "QSYS") continue;
   if (json[i][1].Name === "*NONE") continue;
-  
-  if (keys.indexOf(item) === -1)
-    keys.push(item);
-    
-  if (keys.indexOf(target) === -1)
-    keys.push(target);
+
+  nodes.push({ data: { id: item, typeColor: getTypeColor(json[i][0].Type) } });
+  nodes.push({ data: { id: target, typeColor: getTypeColor(json[i][1].Type) } });
   
   edges.push({data: { source: item, target: target }});
-}
-
-var nodes = [];
-for (var i = 0; i < keys.length; i++) {
-  nodes.push({ data: { id: keys[i] } });
 }
 
 var cy = window.cy = cytoscape({
@@ -69,9 +62,10 @@ var cy = window.cy = cytoscape({
     {
       selector: 'node',
       style: {
+        'shape': 'square',
         'content': 'data(id)',
         'font-size': 18,
-        'background-color': '#ea8a31'
+        'background-color': 'data(typeColor)',
       }
     },
 
@@ -92,6 +86,24 @@ var cy = window.cy = cytoscape({
     edges, edges
   },
 });
+
+function getTypeColor(type) {
+
+  var typeColors = {
+    "*PGM": "#0000A0",
+    "*SRVPGM": "#C0C0C0",
+    "*FILE": "#008000",
+    "*DTAARA": "#808000",
+    
+  }
+
+  if (typeColors[type] !== undefined) {
+    return typeColors[type];
+  } else {
+    return 'black';
+  }
+
+}
 
     </script>
   </body>
